third commit - layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,11 +10,11 @@
   }
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+html, body {
+  height: auto;
+  overflow-y: auto;
 }
+
 
 body {
   color: var(--foreground);
